[gd_scene load_steps=7 format=3 uid="uid://c6vp0obca4e4s"]

[ext_resource type="FontFile" uid="uid://bmylpjhbkpqq3" path="res://Font/PixelFont.ttf" id="1_70wvh"]
[ext_resource type="Script" path="res://Scene/GUI/Dialog.gd" id="1_ea0fb"]
[ext_resource type="Texture2D" uid="uid://b70c756hj3kr5" path="res://Art/Actors/GoldKnight/Faceset.png" id="3_2pte5"]
[ext_resource type="AudioStream" uid="uid://hpias1b86ytw" path="res://Art/Audio/Typing/8_Bit_Game_Text_Typing_mp3.mp3" id="4_um466"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfl0g"]
bg_color = Color(0.635294, 0.482353, 0.368627, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.321569, 0.223529, 0.211765, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_s0m57"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ea0fb")

[node name="TextBoxContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -303.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="TextBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wfl0g")

[node name="MarginContainer" type="MarginContainer" parent="TextBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxContainer/MarginContainer"]
layout_mode = 2

[node name="StartSymbol" type="Label" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_70wvh")
theme_override_font_sizes/font_size = 100
text = "*"

[node name="ScrollContainer" type="ScrollContainer" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_s0m57")
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="Text" type="Label" parent="TextBoxContainer/MarginContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("1_70wvh")
theme_override_font_sizes/font_size = 64
text = "lorem Ipsum is simply dummy text of the printing and lorem Ipsum is simply dummy text of the printing and lorem Ipsum is simply dummy text of the printing and lorem Ipsum is simply dummy text of the printing and lorem Ipsum is simply dummy text of the printing and "
autowrap_mode = 2

[node name="EndSymbol" type="Label" parent="TextBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_70wvh")
theme_override_font_sizes/font_size = 100
text = "v"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 36.0
offset_top = 177.0
offset_right = 76.0
offset_bottom = 217.0
scale = Vector2(15, 15)
texture = ExtResource("3_2pte5")
flip_h = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_um466")
